CIV-12557 - Fee Payment Outcome event notification changes. (#4096)
* Fee Payment Outcome event notification changes.

* fixed build error.